# goalie-analytics-detection

./: .dockerignore  .gitignore  README.md  requirements.txt  run_fast_set.sh  run_pipeline.py
cv_seg/: __init__.py  __main__.py  attribution.py  audio.py  cli.py  colors.py  constants.py  io_utils.py  logger.py  net_detection.py  pipeline.py  postprocess.py  side_map.py  signals.py  windows.py
deploy/: .dockerignore  Dockerfile  README.md  cloudbuild.yaml  deploy.sh
eval/: eval_cv_seg_output.py  eval_metric_seg_output.py
feedback_seg/: CHANGELOG.md  README.md  __init__.py  __main__.py  cli.py  constants.py  gcs_io.py  gemini.py  logger.py  manual_goals.py  models.py  pipeline.py  retry.py  video.py
metrics_seg/: 01_detect_segment_metrics.py  CHANGELOG.md  IMPROVEMENTS_SPEC.md  INVESTIGATION_SUMMARY.md  V13_PILOT_README.md  cache.py  (+5 more)
util/: INVESTIGATION_AB_README.md  audit_gt_coverage.py  autolabel_shots.py  cleanup_features.py  detect_hockeyai.py  diag_goal_area_motion.py  diag_puck_detection.py  diag_save_sounds.py  diagnose_low_coverage.py  discrim_probe.py  discrim_probe_shots.py  discrim_probe_shots_phase2.py  discrim_probe_v2.py  ensure_video.py  eval_snapshot_shot_centering.py  extract_audio_features.py  extract_label_frames.py  extract_label_frames_v2.py  extract_yolo_features.py  labelimg_wrapper.py  predict_shots_yolo.py  prelabel_frames.py  preview_gt_windows.py  progress.py  pyproject.toml  restore_outer_videos.sh  sample_hard_negatives.py  signed_url.py  train_shot_classifier.py  train_yolo_finetune.py  verify_hockeyai.py  yolo_probs_to_windows.py
(+5207 files in other folders)
